--- a/mybatis/src/main/resources/templates/userForm.html
+++ b/mybatis/src/main/resources/templates/userForm.html
@@ -2,23 +2,28 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<meta charset="UTF-8">
-	<title>Users Insert</title>
+	<title>User Form</title>
 </head>
 <body>
 
-<h1>사용자 등록</h1>
+	<h1 th:text="${isUpdate} ? '사용자 수정' : '사용자 등록'"></h1>
 
-<form th:action="@{/users}" th:object="${user}" method="post">
-	<label for="name">이름:</label>
-	<input type="text" th:field="*{name}" id="name" required="required"/><br/><br/>
+	<form th:action="@{/users/{id}(id=${user.id})}" method="post">
+		<input type="hidden" name="_method" value="put"/>
+		
+		<label>ID</label>
+		<input type="text" th:field="*{id}" th:readonly="${isUpdate}"/><br/>
+		
+		<label>이름</label>
+		<input type="text" th:field="*{name}"/><br/>
+		
+		<label>이메일</label>
+		<input type="email" th:field="*{email}"/><br/>
+		
+		<button type="submit" th:text="${isUpdate} ? '수정' : '등록'"></button>
+	</form>
 	
-	<label for="email">이메일:</label>
-	<input type="email" th:field="*{email}" id="email" required="required"/><br/><br/>
-	
-	<button type="submit">등록</button>
-</form>
-
-<br/>
-<a th:href="@{/users}">목록으로 돌아가기</a>
+	<br/>
+	<a th:href="@{/users}">목록으로 돌아가기</a>
 </body>
 </html>
