--- a/mybatis/src/main/resources/templates/userList.html
+++ b/mybatis/src/main/resources/templates/userList.html
@@ -26,14 +26,16 @@
 			<td th:text="${user.name}"></td>
 			<td th:text="${user.email}"></td>
 			<td>
-				<a th:href="@{/users/edit/{id}(id=${user.id})">
+				<a th:href="@{/users/update/{id}(id=${user.id})}">
 					<button>수정</button>
 				</a>
 			</td>
-			<form th:action="@{/users/{id}(id=${user.id})}" method="post">
-				<input type="hidden" name="_method" value="delete"/>
-				<button type="submit">삭제</button>
-			</form>
+			<td>
+				<form th:action="@{/users/{id}(id=${user.id})}" method="post">
+					<input type="hidden" name="_method" value="delete"/>
+					<button type="submit">삭제</button>
+				</form>
+			</td>
 		</tr>
 		</tbody>
 	</table>
